--- a/public/divpackrea.css
+++ b/public/divpackrea.css
@@ -35,7 +35,7 @@
 
 #packrealistefivemid > div {    
     margin-left: 175px;
-    margin-top: 20px;
+    margin-top: 30px;
     color: var(--text-color);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
@@ -47,7 +47,7 @@
 
 #packgunfightfivemid > div {
     margin-left: 175px;
-    margin-top: 20px;
+    margin-top: 30px;
     color: var(--text-color);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
@@ -86,7 +86,8 @@
     left: 0;
     width: 250px;
     height: 100%;
-    background-color: #0f172a;
+    background-color: var(---background-color);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
     z-index: 9999;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -183,4 +184,15 @@
 .no-zoom {
     cursor: not-allowed;
     opacity: 0.7;
+}
+
+#particle-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Derrière tout le contenu */
+    background: #000; /* Fond noir */
+    pointer-events: none; /* Empêche les interactions avec le canvas */
 }
